# Plugalyzer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-release.yaml  build-test.yaml
Source/: AudioDiff.cpp  AudioDiff.h  AudioDiffCommand.h  Automation.cpp  Automation.h  BusLayoutsCommand.cpp  BusLayoutsCommand.h  Errors.h  GenerateAutomationCommand.cpp  GenerateAutomationCommand.h  Generators.cpp  Generators.h  ListParametersCommand.cpp  ListParametersCommand.h  ManageStateCommand.cpp  ManageStateCommand.h  Parsers.cpp  Parsers.h  Plugalyzer.cpp  Plugalyzer.h  PluginProcess.cpp  PluginProcess.h  PresetLoadingExtensionsVisitor.cpp  PresetLoadingExtensionsVisitor.h  ProcessCommand.cpp  ProcessCommand.h  Utils.cpp  Utils.h  Validators.cpp  Validators.h  main.cpp
Source/commands/: AudioDiffCommand.cpp  AudioDiffCommand.h  BusLayoutsCommand.cpp  CLICommand.h  GenerateAutomationCommand.cpp  GenerateAutomationCommand.h  ListParametersCommand.cpp  ListParametersCommand.h  ProcessCommand.cpp  ProcessCommand.h  StateCommand.cpp  StateCommand.h
docs-and-demos/regression-test/: regression-test.py
test/: cmds.sh
test/PlugalyzeeAudio/: .clang-format  CMakeLists.txt  PlugalyzeeAudio.cpp  PlugalyzeeAudio.h  PluginProcessor.cpp  PluginProcessor.h  preset1.json
test/configs/: generator-2ch-noise.json  generator-2ch-sine-440.json  generator-2ch-sine-880.json  generator-2ch-sine-noise.json  plug-audio-process-with-generator.json
test/e2e_tests/: generate_test_data.py  run_tests.py  test_cases.py  test_utils.py  xml_compare.py
test/expected/: plug-audio-bus-layouts.json  plug-audio-bus-layouts.txt  plug-audio-generate-automation.json  plug-audio-list-parameters-json.json  plug-audio-list-parameters-text.txt  plug-audio-state-default-params.json  plug-audio-state-default.xml  plug-audio-state-params.json  plug-audio-state-params.xml
